@@ -62,6 +62,12 @@ sub run {
 		return 0;
 	}
 
+	# Check presets.
+	if (! exists $PRESETS{$self->{'_opts'}->{'p'}}) {
+		print STDERR 'Bad preset. Possible values are \''.(join "', '", (sort keys %PRESETS))."'.\n";
+		return 1;
+	}
+
 	if ($PRESETS{$self->{'_opts'}->{'p'}}[0] > @ARGV) {
 		print 'Wrong number of arguments (need '.$PRESETS{$self->{'_opts'}->{'p'}}[0].
 			" for command '".$PRESETS{$self->{'_opts'}->{'p'}}[1]."').\n";
