@@ -1,4 +1,5 @@
 0.02
+ - Add check for preset values.
 
 0.01 2023-12-07T21:19:44+01:00
  - First version.
